MEM-83: Fix scrollbar always appearing

--- a/apps/memspace-web/src/components/SpaceLayout/SpaceLayout.module.css
+++ b/apps/memspace-web/src/components/SpaceLayout/SpaceLayout.module.css
@@ -3,7 +3,6 @@
   top: 0;
   bottom: 0;
   width: 100%;
-  overflow-y: scroll;
   display: flex;
   flex-direction: column;
 }
